src/objects/CORE_NT_Team__c.object
<CustomObject>
    <description>Core – Network Tracking - This object is used to capture Teams information in Network.</description>
    <fields>
        <fullName>ProjTeam_ExtId__c</fullName>
        <externalId>true</externalId>
        <label>ProjTeam ExtId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>CORE_NT_Project__c</referenceTo>
        <relationshipLabel>Project Teams</relationshipLabel>
        <relationshipName>Project_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resource_UID__c</fullName>
        <inlineHelpText>Used to identify the resource in the MPP xml.</inlineHelpText>
        <label>Resource UID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task Performer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TeamMemberName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TeamMemberName</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Team</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>